Code cleanup run